--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,24 +16,42 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '9.0.x'
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Restore NuGet packages
+        run: dotnet restore
 
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+
+      - name: Generate image tag
+        id: image_tag
+        run: |
+          TIMESTAMP=$(date -u +'%Y%m%d-%H%M%S')
+          RUN_NUMBER=${{ github.run_number }}
+          TAG="${{ secrets.DOCKERHUB_USERNAME }}/githubaction-k8s-dev:${RUN_NUMBER}-${TIMESTAMP}"
+          LATEST="${{ secrets.DOCKERHUB_USERNAME }}/githubaction-k8s-dev:latest"
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          echo "latest=$LATEST" >> $GITHUB_OUTPUT
+          echo "Generated tag: $TAG"
+          echo "Generated latest: $LATEST"
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ steps.image_tag.outputs.tag }}
+            ${{ steps.image_tag.outputs.latest }}
